Fixing text alignments

--- a/src/app/rules/rules.component.css
+++ b/src/app/rules/rules.component.css
@@ -9,6 +9,7 @@ mat-card {
     background-color: rgba(135, 211, 124, 0.2);
     padding: 10px;
     margin-bottom: 10px;
+    text-align: justify;
 }
 
 .allowed-container mat-icon {
@@ -20,6 +21,7 @@ mat-card {
     background-color: rgba(245, 81, 81, 0.3);
     padding: 10px;
     margin-bottom: 10px;
+    text-align: justify;
 }
 
 .not-allowed-container mat-icon {
